--- a/CRM-Update-Final-Project-FE/src/app/layout/aside/aside.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layout/aside/aside.component.html
@@ -1,6 +1,6 @@
 <aside class="layout-menu menu-vertical menu bg-menu-theme" id="layout-menu">
   <div class="app-brand demo">
-    <a class="app-brand-link" href="index.html">
+    <a class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                   version="1.1"
@@ -68,319 +68,50 @@
 
   <ul class="menu-inner py-1">
     <!-- Dashboard -->
-    <li class="menu-item">
-      <a class="menu-link" href="index.html">
+    <li class="menu-item cursor-pointer">
+      <a class="menu-link">
         <em class="menu-icon tf-icons bx bx-home-circle"></em>
         <div data-i18n="Analytics">Dashboard</div>
       </a>
     </li>
 
-    <!-- Layouts -->
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
-        <em class="menu-icon tf-icons bx bx-layout"></em>
-        <div data-i18n="Layouts">Layouts</div>
-      </a>
-
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="layouts-without-menu.html">
-            <div data-i18n="Without menu">Without menu</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="layouts-without-navbar.html">
-            <div data-i18n="Without navbar">Without navbar</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="layouts-container.html">
-            <div data-i18n="Container">Container</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="layouts-fluid.html">
-            <div data-i18n="Fluid">Fluid</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="layouts-blank.html">
-            <div data-i18n="Blank">Blank</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-
+    <!-- Page -->
     <li class="menu-header small text-uppercase">
       <span class="menu-header-text">Pages</span>
     </li>
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
+    <li class="menu-item cursor-pointer">
+      <a class="menu-link">
         <em class="menu-icon tf-icons bx bx-dock-top"></em>
-        <div data-i18n="Account Settings">Account Settings</div>
+        <div data-i18n="Projects">Projects</div>
       </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="pages-account-settings-account.html">
-            <div data-i18n="Account">Account</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="pages-account-settings-notifications.html">
-            <div data-i18n="Notifications">Notifications</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="pages-account-settings-connections.html">
-            <div data-i18n="Connections">Connections</div>
-          </a>
-        </li>
-      </ul>
     </li>
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
+    <li class="menu-item cursor-pointer">
+      <a class="menu-link">
         <em class="menu-icon tf-icons bx bx-lock-open-alt"></em>
-        <div data-i18n="Authentications">Authentications</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="auth-login-basic.html" target="_blank">
-            <div data-i18n="Basic">Login</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="auth-register-basic.html" target="_blank">
-            <div data-i18n="Basic">Register</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="auth-forgot-password-basic.html" target="_blank">
-            <div data-i18n="Basic">Forgot Password</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
-        <em class="menu-icon tf-icons bx bx-cube-alt"></em>
-        <div data-i18n="Misc">Misc</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="pages-misc-error.html">
-            <div data-i18n="Error">Error</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="pages-misc-under-maintenance.html">
-            <div data-i18n="Under Maintenance">Under Maintenance</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <!-- Components -->
-    <li class="menu-header small text-uppercase"><span class="menu-header-text">Components</span></li>
-    <!-- Cards -->
-    <li class="menu-item">
-      <a class="menu-link" href="cards-basic.html">
-        <em class="menu-icon tf-icons bx bx-collection"></em>
-        <div data-i18n="Basic">Cards</div>
+        <div data-i18n="Tasks">Tasks</div>
       </a>
     </li>
-    <!-- User interface -->
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0)">
-        <em class="menu-icon tf-icons bx bx-box"></em>
-        <div data-i18n="User interface">User interface</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="ui-accordion.html">
-            <div data-i18n="Accordion">Accordion</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-alerts.html">
-            <div data-i18n="Alerts">Alerts</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-badges.html">
-            <div data-i18n="Badges">Badges</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-buttons.html">
-            <div data-i18n="Buttons">Buttons</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-carousel.html">
-            <div data-i18n="Carousel">Carousel</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-collapse.html">
-            <div data-i18n="Collapse">Collapse</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-dropdowns.html">
-            <div data-i18n="Dropdowns">Dropdowns</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-footer.html">
-            <div data-i18n="Footer">Footer</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-list-groups.html">
-            <div data-i18n="List Groups">List groups</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-modals.html">
-            <div data-i18n="Modals">Modals</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-navbar.html">
-            <div data-i18n="Navbar">Navbar</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-offcanvas.html">
-            <div data-i18n="Offcanvas">Offcanvas</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-pagination-breadcrumbs.html">
-            <div data-i18n="Pagination &amp; Breadcrumbs">Pagination &amp; Breadcrumbs</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-progress.html">
-            <div data-i18n="Progress">Progress</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-spinners.html">
-            <div data-i18n="Spinners">Spinners</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-tabs-pills.html">
-            <div data-i18n="Tabs &amp; Pills">Tabs &amp; Pills</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-toasts.html">
-            <div data-i18n="Toasts">Toasts</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-tooltips-popovers.html">
-            <div data-i18n="Tooltips & Popovers">Tooltips &amp; popovers</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="ui-typography.html">
-            <div data-i18n="Typography">Typography</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-
-    <!-- Extended components -->
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0)">
-        <em class="menu-icon tf-icons bx bx-copy"></em>
-        <div data-i18n="Extended UI">Extended UI</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="extended-ui-perfect-scrollbar.html">
-            <div data-i18n="Perfect Scrollbar">Perfect scrollbar</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="extended-ui-text-divider.html">
-            <div data-i18n="Text Divider">Text Divider</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-
-    <li class="menu-item">
-      <a class="menu-link" href="icons-boxicons.html">
-        <em class="menu-icon tf-icons bx bx-crown"></em>
-        <div data-i18n="Boxicons">Boxicons</div>
+    <li class="menu-item cursor-pointer">
+      <a class="menu-link">
+        <em class="menu-icon tf-icons bx bx-user"></em>
+        <div data-i18n="Users">Users</div>
       </a>
     </li>
 
-    <!-- Forms & Tables -->
-    <li class="menu-header small text-uppercase"><span class="menu-header-text">Forms &amp; Tables</span></li>
-    <!-- Forms -->
-    <li class="menu-item">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
-        <em class="menu-icon tf-icons bx bx-detail"></em>
-        <div data-i18n="Form Elements">Form Elements</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="forms-basic-inputs.html">
-            <div data-i18n="Basic Inputs">Basic Inputs</div>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="forms-input-groups.html">
-            <div data-i18n="Input groups">Input groups</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li class="menu-item active open">
-      <a class="menu-link menu-toggle" href="javascript:void(0);">
-        <em class="menu-icon tf-icons bx bx-detail"></em>
-        <div data-i18n="Form Layouts">Form Layouts</div>
-      </a>
-      <ul class="menu-sub">
-        <li class="menu-item">
-          <a class="menu-link" href="form-layouts-vertical.html">
-            <div data-i18n="Vertical Form">Vertical Form</div>
-          </a>
-        </li>
-        <li class="menu-item active">
-          <a class="menu-link" href="form-layouts-horizontal.html">
-            <div data-i18n="Horizontal Form">Horizontal Form</div>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <!-- Tables -->
-    <li class="menu-item">
-      <a class="menu-link" href="tables-basic.html">
-        <em class="menu-icon tf-icons bx bx-table"></em>
-        <div data-i18n="Tables">Tables</div>
-      </a>
-    </li>
     <!-- Misc -->
     <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
-    <li class="menu-item">
+    <li class="menu-item cursor-pointer">
       <a
         class="menu-link"
-        href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
         target="_blank"
       >
         <em class="menu-icon tf-icons bx bx-support"></em>
         <div data-i18n="Support">Support</div>
       </a>
     </li>
-    <li class="menu-item">
+    <li class="menu-item cursor-pointer">
       <a
         class="menu-link"
-        href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
         target="_blank"
       >
         <em class="menu-icon tf-icons bx bx-file"></em>
