--- a/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
@@ -1,4 +1,4 @@
-<aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
+<aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme h-100">
     <div class="app-brand demo">
         <a href="../../../index.html" class="app-brand-link">
               <span class="app-brand-logo demo">
@@ -69,7 +69,7 @@
     <ul class="menu-inner py-1">
         <!-- Dashboard -->
         <li class="menu-item">
-            <a href="../../../index.html" class="menu-link">
+            <a class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div data-i18n="Analytics">Dashboard</div>
             </a>
