--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -76,7 +76,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="auth-login-basic.html">
+                        <a class="dropdown-item" (click)="logout()">
                             <em class="bx bx-power-off me-2"></em>
                             <span class="align-middle">Log Out</span>
                         </a>
