--- a/CRM-Update-Final-Project-FE/src/app/layouts/main/main.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/main/main.component.html
@@ -1,51 +1,54 @@
-<!-- Layout wrapper -->
-<div class="layout-wrapper layout-content-navbar" *ngIf="true">
-    <div class="layout-container">
-        <!-- Menu -->
-        <app-aside></app-aside>
-        <!-- / Menu -->
-        <!-- Layout container -->
-        <div class="layout-page">
-            <!-- Navbar -->
-            <app-header></app-header>
-            <!-- / Navbar -->
-            <!-- Content wrapper -->
-            <div class="content-wrapper">
-                <!-- Content -->
-                <router-outlet></router-outlet>
-                <!-- / Content -->
-                <!-- Footer -->
-                <app-footer></app-footer>
-                <!-- / Footer -->
-                <div class="content-backdrop fade"></div>
+<ng-container *ngIf="isLogin; else isNotLogin">
+    <!-- Layout wrapper -->
+    <div class="layout-wrapper layout-content-navbar">
+        <div class="layout-container">
+            <!-- Menu -->
+            <app-aside></app-aside>
+            <!-- / Menu -->
+            <!-- Layout container -->
+            <div class="layout-page">
+                <!-- Navbar -->
+                <app-header></app-header>
+                <!-- / Navbar -->
+                <!-- Content wrapper -->
+                <div class="content-wrapper">
+                    <!-- Content -->
+                    <router-outlet></router-outlet>
+                    <!-- / Content -->
+                    <!-- Footer -->
+                    <app-footer></app-footer>
+                    <!-- / Footer -->
+                    <div class="content-backdrop fade"></div>
+                </div>
+                <!-- Content wrapper -->
             </div>
-            <!-- Content wrapper -->
+            <!-- / Layout page -->
         </div>
-        <!-- / Layout page -->
+        <!-- Overlay -->
+        <div class="layout-overlay layout-menu-toggle"></div>
     </div>
-    <!-- Overlay -->
-    <div class="layout-overlay layout-menu-toggle"></div>
-</div>
-<!-- / Layout wrapper -->
-
-<!-- Layout wrapper -->
-<div class="layout-wrapper layout-content-navbar" *ngIf="false">
-    <div class="layout-container">
-        <!-- Layout container -->
-        <div class="layout-page">
-            <!-- Content wrapper -->
-            <div class="content-wrapper">
-                <!-- Content -->
-                <router-outlet></router-outlet>
-                <!-- / Content -->
-                <div class="content-backdrop fade"></div>
+    <!-- / Layout wrapper -->
+</ng-container>
+<ng-template #isNotLogin>
+    <!-- Layout wrapper -->
+    <div class="layout-wrapper layout-content-navbar">
+        <div class="layout-container">
+            <!-- Layout container -->
+            <div class="layout-page">
+                <!-- Content wrapper -->
+                <div class="content-wrapper">
+                    <!-- Content -->
+                    <router-outlet></router-outlet>
+                    <!-- / Content -->
+                    <div class="content-backdrop fade"></div>
+                </div>
+                <!-- Content wrapper -->
             </div>
-            <!-- Content wrapper -->
+            <!-- / Layout page -->
         </div>
-        <!-- / Layout page -->
-    </div>
 
-    <!-- Overlay -->
-    <div class="layout-overlay layout-menu-toggle"></div>
-</div>
-<!-- / Layout wrapper -->
+        <!-- Overlay -->
+        <div class="layout-overlay layout-menu-toggle"></div>
+    </div>
+    <!-- / Layout wrapper -->
+</ng-template>
