--- a/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.scss
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.scss
@@ -272,6 +272,13 @@ $light-text: #999;
   }
 }
 
+table {
+  width: 100%;
+}
+
+
+
+
 /**==========================
    91. Project list css end
 //=============================**/
