FE-handle-user-and-task-table

--- a/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
@@ -81,19 +81,19 @@
         <li class="menu-item">
             <a class="menu-link">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Projects">Projects</div>
+                <a href="project" data-i18n="Projects">Projects</a>
             </a>
         </li>
         <li class="menu-item">
             <a class="menu-link">
                 <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
-                <div data-i18n="Tasks">Tasks</div>
+                <a href="task" data-i18n="Tasks">Tasks</a>
             </a>
         </li>
         <li class="menu-item">
             <a class="menu-link">
                 <i class="menu-icon tf-icons bx bx-cube-alt"></i>
-                <div data-i18n="Staff">Staff</div>
+                <a href="user"data-i18n="Staff">Staff</a>
             </a>
         </li>
 
