--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -1,1 +1,131 @@
-<p>task works!</p>
+<div class="container-fluid">
+    <div class="page-title">
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <h3>
+                    Project List</h3>
+            </div>
+            <div class="col-12 col-sm-6">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                             class="feather feather-home">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                        </svg>
+                    </a></li>
+                    <li class="breadcrumb-item">Dashboard</li>
+                    <li class="breadcrumb-item active">Staff List</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row project-cards">
+        <div class="col-md-12 project-list">
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6">
+                        <ul class="nav nav-tabs border-tab" id="top-tab" role="tablist">
+                            <li class="nav-item"><button class="nav-link active" id="top-home-tab" data-bs-toggle="tab"
+                                                    href="#top-home" role="tab" aria-controls="top-home"
+                                                    aria-selected="true" (click)="getAllStaffs()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round" class="feather feather-target">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <circle cx="12" cy="12" r="6"></circle>
+                                    <circle cx="12" cy="12" r="2"></circle>
+                                </svg>
+                                All</button></li>   
+                            <li class="nav-item"><button class="nav-link" id="profile-top-tab" data-bs-toggle="tab"
+                                                    href="#top-profile" role="tab" aria-controls="top-profile"
+                                                    aria-selected="false" (click)="getAllTasksWithStatus(taskStatus[0])">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                                </svg>
+                                UNASSIGNED</button>
+                            </li>
+                            <li class="nav-item"><button class="nav-link" id="contact-top-tab" data-bs-toggle="tab"
+                                                    href="#top-contact" role="tab" aria-controls="top-contact"
+                                                    aria-selected="false" (click)="getAllTasksWithStatus(taskStatus[1])">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-check" viewBox="0 0 16 16">
+                                    <path d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                                </svg>
+                                STARTED</button>
+                            </li>
+                            <li class="nav-item"><button class="nav-link" id="contact-top-tab" data-bs-toggle="tab"
+                                href="#top-contact" role="tab" aria-controls="top-contact"
+                                aria-selected="false" (click)="getAllTasksWithStatus(taskStatus[2])">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
+                                <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708z"/>
+                            </svg>
+                                COMPLETED</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 p-0">
+                        <div class="form-group mb-0 me-0"></div>
+                        <button class="btn btn-primary" href="projectcreate.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-plus" viewBox="0 0 16 16">
+                                <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
+                                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                            </svg>
+                            &nbsp;&nbsp;Create New Task</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-body">
+
+                <!-- START TASK TABLE -->
+                <div>
+                    <mat-form-field>
+                        <mat-label>Search..?</mat-label>
+                        <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)">
+                    </mat-form-field>
+                    <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+                        <ng-container matColumnDef="avatar"> 
+                            <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">Avatar</th>
+                            <td mat-cell *matCellDef="let element">
+                                  <img *ngIf= "element.avatar == null && element.gender == 'MALE'" src = "/assets/img/avatars/male-default.png" width="50" height="50">
+                                  <img *ngIf= "element.avatar == null && element.gender == 'FEMALE'" src = "/assets/img/avatars/female-default.png" width="50" height="50">
+                                  <img *ngIf= "element.avatar != null" [src]="element.symbol" width="50" height="50">
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="name">
+                          <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Name </th>
+                          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="description">
+                          <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Description </th>
+                          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="status">
+                            <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Status </th>
+                            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Action </th>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-raised-button color="primary" (click)="updateTask(element.id)">Update</button> | 
+                                <button mat-raised-button color="warn" (click)="deleteTask(element.id)">Delete</button>
+                            </td>
+                          </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>    
+                    <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons>
+                    </mat-paginator>
+                </div>
+                <!-- END TASK TABLE -->
+
+            </div>
+        </div>
+    </div>
+</div>
