FE handle CRUD project, user and task data

--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -18,7 +18,7 @@
                             <li class="nav-item">
                                 <button class="nav-link active" id="top-home-tab" data-bs-toggle="tab"
                                         href="#top-home" role="tab" aria-controls="top-home"
-                                        aria-selected="true" (click)="getAllStaffs()">
+                                        aria-selected="true" (click)="getAllTasks()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                          fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                          stroke-linejoin="round" class="feather feather-target">
@@ -67,7 +67,7 @@
                     </div>
                     <div class="col-md-6 p-0">
                         <div class="form-group mb-0 me-0"></div>
-                        <button class="btn btn-primary" href="projectcreate.html">
+                        <button class="btn btn-primary" href="projectcreate.html" (click)="addTask()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-calendar-plus" viewBox="0 0 16 16">
                                 <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
@@ -118,7 +118,7 @@
                             <ng-container matColumnDef="action">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Action</th>
                                 <td mat-cell *matCellDef="let element">
-                                    <button mat-raised-button color="primary" (click)="updateTask(element.id)">Update
+                                    <button mat-raised-button color="primary" (click)="updateTask(element)">Update
                                     </button>
                                     |
                                     <button mat-raised-button color="warn" (click)="deleteTask(element.id)">Delete
