--- a/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-md-6 p-0">
                         <div class="form-group mb-0 me-0"></div>
-                        <button class="btn btn-primary" (click)="onAddProject()">
+                        <button class="btn btn-primary" (click)="addProject()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                  stroke-linejoin="round" class="feather feather-plus-square">
@@ -88,9 +88,9 @@
                             <ng-container matColumnDef="symbol">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">Symbol</th>
                                 <td mat-cell *matCellDef="let element">
-                                    <img *ngIf="element.symbol == null" src="/assets/img/project-symbols/default.png"
+                                    <img *ngIf="element.symbol == null" src="/assets/img/project-symbols/default3.png"
                                          width="50" height="50">
-                                    <img *ngIf="element.symbol != null" [src]="element.symbol" width="50" height="50">
+                                    <img *ngIf="element.symbol != null" [src]="'/assets/img/project-symbols/'+element.symbol+'.png'" width="50" height="50">
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="name">
@@ -111,7 +111,7 @@
                             <ng-container matColumnDef="action">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Action</th>
                                 <td mat-cell *matCellDef="let element">
-                                    <button mat-raised-button color="primary" (click)="updateProject(element.id)">
+                                    <button mat-raised-button color="primary" (click)="updateProject(element)">
                                         Update
                                     </button>
                                     |
