--- a/CRM-Update-Final-Project-FE/src/app/pages/components/staff/staff.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/staff/staff.component.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-md-6 p-0">
                         <div class="form-group mb-0 me-0"></div>
-                        <button class="btn btn-primary" href="projectcreate.html">
+                        <button class="btn btn-primary" href="projectcreate.html" (click)="addStaff()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-person-plus" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -119,7 +119,7 @@
                             <ng-container matColumnDef="action">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Action</th>
                                 <td mat-cell *matCellDef="let element">
-                                    <button mat-raised-button color="primary" (click)="updateStaff(element.id)">Update
+                                    <button mat-raised-button color="primary" (click)="updateStaff(element)">Update
                                     </button>
                                     |
                                     <button mat-raised-button color="warn" (click)="deleteStaff(element.id)">Delete
