--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-notify/dialog-notify.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-notify/dialog-notify.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>{{type}}</h1>
+<h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
     {{message}}
 </div>
 <div mat-dialog-actions>
     <app-button (onClick)="cancelFunc($event)" [label]=appSettings.BUTTON_CANCEL></app-button>
-    <app-button (onClick)="okFunc($event)" [label]=appSettings.BUTTON_CANCEL></app-button>
+    <app-button (onClick)="okFunc($event)" [label]=appSettings.BUTTON_OK></app-button>
 </div>
