--- a/CRM-Update-Final-Project-FE/src/styles.scss
+++ b/CRM-Update-Final-Project-FE/src/styles.scss
@@ -1,8 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/scss/breakpoint";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
 
-.myPanelClass{
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.myPanelClass {
   margin-top: 30px !important;
+}
+
+@include respond(phone) {
+  .widthDialogForm {
+    width: 80%;
+    height: 80%;
+    margin-top: 70px;
+  }
+}
+
+@include respond(tablet) {
+  .widthDialogForm {
+    width: 40%;
+    height: 80%;
+    margin-top: 70px;
+  }
+}
+
+@include respond(small-desktop) {
+  .widthDialogForm {
+    width: 40%;
+  }
+}
+
+@include respond(large-desktop) {
+  .widthDialogForm {
+    width: 40%;
+  }
 }
