--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -4,7 +4,7 @@
 >
     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
         <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-            <em class="bx bx-menu bx-sm"></em>
+            <i class="bx bx-menu bx-sm"></i>
         </a>
     </div>
 
@@ -27,9 +27,9 @@
 
             <!-- User -->
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                <a class="nav-link dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle"/>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -38,7 +38,8 @@
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
-                                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                        <img src="../assets/img/avatars/1.png" alt
+                                             class="w-px-40 h-auto rounded-circle"/>
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
@@ -59,15 +60,9 @@
                     </li>
                     <li>
                         <a class="dropdown-item" href="#">
-                            <em class="bx bx-cog me-2"></em>
-                            <span class="align-middle">Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">
                         <span class="d-flex align-items-center align-middle">
-                          <em class="flex-shrink-0 bx bx-credit-card me-2"></em>
-                          <span class="flex-grow-1 align-middle">Billing</span>
+                          <em class="flex-shrink-0 bx bxs-notification me-2"></em>
+                          <span class="flex-grow-1 align-middle">Notification</span>
                           <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
                         </span>
                         </a>
