--- a/CRM-Update-Final-Project-FE/src/app/share/components/button/button.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/button/button.component.html
@@ -1,3 +1,3 @@
 <div id="button">
-    <button type="button" class="btn" (click)="onClickButton($event)">{{label}}</button>
+    <button type="button" class="btn btn-secondary" (click)="onClickButton($event)">{{label}}</button>
 </div>
