--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -104,11 +104,11 @@
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Name</th>
                                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                             </ng-container>
-                            <ng-container matColumnDef="description">
+                            <ng-container matColumnDef="projectName">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
-                                    Description
+                                    Project
                                 </th>
-                                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                                <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
                             </ng-container>
                             <ng-container matColumnDef="status">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Status
