FE update user profile and refactor Login API

--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -29,7 +29,8 @@
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img src="/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle"/>
+                        <img *ngIf="avatar == null" src="/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle"/>
+                        <img *ngIf="avatar != null"src="avatar" alt class="w-px-40 h-auto rounded-circle"/>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -53,7 +54,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item" (click)="getProfile()">
                             <em class="bx bx-user me-2"></em>
                             <span class="align-middle">My Profile</span>
                         </a>
