--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -29,8 +29,9 @@
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img *ngIf="avatar == null" src="/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle"/>
-                        <img *ngIf="avatar != null"src="avatar" alt class="w-px-40 h-auto rounded-circle"/>
+                        <img *ngIf="avatar == null && gender == 'MALE'" src="/assets/img/avatars/male-default.png" alt class="w-px-40 rounded-circle"/>
+                        <img *ngIf="avatar == null && gender == 'FEMALE'" src="/assets/img/avatars/female-default.png" alt class="w-px-40 rounded-circle"/>
+                        <img *ngIf="avatar != null" [src]="avatar" alt class="w-px-40 rounded-circle"/>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -39,8 +40,12 @@
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
-                                        <img src="/assets/img/avatars/1.png" alt
-                                             class="w-px-40 h-auto rounded-circle"/>
+                                        <img *ngIf="avatar == null && gender == 'MALE'" src="/assets/img/avatars/male-default.png" alt
+                                             class="w-px-40 rounded-circle"/>
+                                        <img *ngIf="avatar == null && gender == 'FEMALE'" src="/assets/img/avatars/female-default.png" alt
+                                             class="w-px-40 rounded-circle"/>
+                                        <img *ngIf="avatar != null" [src]="avatar" alt
+                                            class="w-px-40 rounded-circle"/>
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
